# tibetan-intertext-lab

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/: index.html
docs/agents/: domain.md  issue-tracker.md
docs/analysis/: full-corpus-pairwise-readout-2026-05-15.md
docs/corpus_pairwise_bidirectional_synthesis/: index.html  report_data.js  synthesis.csv  synthesis.json
docs/corpus_pairwise_full/: index.html
docs/corpus_pairwise_reverse_full/: index.html
docs/site/corpus_pairwise_full/: index.html
scripts/: export_pair_topk.py  generate_bidirectional_pairwise_report.py  generate_corpus_pairwise_report.py  run_bidirectional_corpus_pairwise.py  run_corpus_pairwise_similarity.py  run_pairwise_text_similarity.py
tasks/: lessons.md
tests/: test_cli.py  test_corpus_bidirectional.py  test_corpus_pairwise.py  test_embeddings_device.py  test_pairwise.py  test_pairwise_run.py  test_sdk.py
tibetan_pipeline/: __init__.py  corpus_bidirectional.py  corpus_pairwise.py  embeddings.py  pairwise.py  pairwise_run.py  sdk.py
tibetan_pipeline/reports/: __init__.py  bidirectional_synthesis_report.py  corpus_pairwise_report.py
